--- a/EDA - Indígenas .ipynb
+++ b/EDA - Indígenas .ipynb
@@ -1463,7 +1463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 128,
    "metadata": {},
    "outputs": [
     {
@@ -1504,6 +1504,14 @@
    "source": [
     "# Estatistica de Resumo `indigenas`\n",
     "resumo_estatistico(homem_rural_ind_freq_table$`Declararam-se Indigenas (fi)`)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Interpretação:\n",
+    "* A média de homens que se declaram indígena em terras indígenas é de `13546` com um desvio padrão de `10443`. O grupo de idades com mais homens e o intervalo que vai dos 5 a 9 anos."
    ]
   },
   {
@@ -2909,6 +2917,13 @@
     "    xlim(c(-1, 4)) +\n",
     "    theme_void() +\n",
     "    theme(legend.position = \"none\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "O padrão que foi apresentado quando analisamos os dados gerais e que se extendeu ao sexo masculino e feminino foi a média de pessoas que se declaram indígena estando em terras indígenas em comparação as que não se declaram e que estão fora das terras indígenas. Outro ponto interessante a levantar e que a grande maioria dos individuos são jovens abrangendo a casa dos 5 aos 29 anos, sendo a maior concentração no grupo de 5 a 9 anos. Um outro padrão visível nos dados é a queda no número de pessoas à medida que temos idades mais avançadas."
    ]
   },
   {
